Updated description and web titles on all pages

--- a/creative_services/brandstrategy.html
+++ b/creative_services/brandstrategy.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
+    content="Creafix Design offers support to many businesses helping them create brands they are proud of.">
   <link rel="icon" href="./../images/Icon small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
