--- a/creative_services/logodesign.html
+++ b/creative_services/logodesign.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
+    content="Creafix Design offers logo design services to businesses to help them stand out.">
   <link rel="icon" href="./../images/Icon small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -127,7 +127,7 @@
         <p class=" mb-1">
         <ul>
           <li class="bio-list">◼ Logo creation</li>
-          <li class="bio-list" >◼ Icon design</li>
+          <li class="bio-list">◼ Icon design</li>
           <li class="bio-list">◼ Branding creation</li>
           <li class="bio-list">◼ Rebranding</li>
           <li class="bio-list">◼ Brand style guides</li>
