--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-  <title>Visual design and web development - Creafix Design </title>
+  <title>Visual design, digital marketing and web development - Creafix Design </title>
   <meta charset="UTF-8" />
-  <meta name="description" content="Creafix Design is a web development and graphic design service provider based in New Zealand. I have experience building websites and e-commerce sites as well as developing brand identities and providing general graphic design services. " >
+  <meta name="description" content="Creafix Design is a web development, digital marketing and graphic design service provider based in New Zealand. We have experience building websites and e-commerce sites as well as developing brand identities and digital marketing services. " >
 <link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   
