--- a/thankyou.html
+++ b/thankyou.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-  <title>The list of graphic design and web development services we offer - Creafix Design </title>
+  <title>Thank you for reaching out - Creafix Design </title>
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design offers a comprehensive list of expert services to help you build your website or create graphics you need for your business. I create logo and brands and integrate them into beautiful functional websites.">
+    content="Creafix Design's thank you for contacting us.">
   <link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
