--- a/web_development/seo.html
+++ b/web_development/seo.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Check out my previous web development and garphic design projects - Creafix Design </title>
+  <title>We manage your Search Engine Optimisation program - Creafix Design </title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
+    content="Creafix Design can help you be more visible to your target market by improving your SEO ranking on Google.">
   <link rel="icon" href="images/Icon small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -115,7 +115,7 @@
   <div class="container">
     <div class="row">
       <div class="col mb-3 align-self-center">
-        <img src="../images/seo.PNG" alt="Phone screen with google search page" class="service-image">
+        <img src="../images/seo.PNG" alt="Phone screen with google search page results" class="service-image">
       </div>
       <div class="col">
         <p class=" mb-1 bio">Search Engine optimisation or SEO is the process used to increase and improve the quality of the unpaid traffic coming
