--- a/web_development/webdesign.html
+++ b/web_development/webdesign.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Check out my previous web development and garphic design projects - Creafix Design </title>
+  <title>We create beautiful functional websites - Creafix Design </title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
+    content="Creafix Design extensive experience in building a large variety of websites for businesses.">
   <link rel="icon" href="images/Icon small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -146,7 +146,7 @@
       </div>
     </div>
   </div>
-  
+
 <div class="container creative-services">
   <div class="row">
     <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
