--- a/web_development/websiteaudit.html
+++ b/web_development/websiteaudit.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Check out my previous web development and garphic design projects - Creafix Design </title>
+  <title>We evaluate websites and offer solutions to optimise websites - Creafix Design </title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
+    content="Creafix Design can carry out an audit of your website and suggests option for improvement.">
   <link rel="icon" href="images/Icon small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
