--- a/creative_services/marketingcollateral.html
+++ b/creative_services/marketingcollateral.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
+    content="Creafix Design design all kind of marketing material and collateral for businesses.">
   <link rel="icon" href="./../images/Icon small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
