--- a/digital_marketing/emailmarketing.html
+++ b/digital_marketing/emailmarketing.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
+    content="Creafix Design can help you increase your reach by creating top notch email marketing strategies.">
   <link rel="icon" href="./../images/Icon small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
