--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-  <title>Privacy Policy - Creafix Design </title>
+  <title>Our Privacy Policy - Creafix Design </title>
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design offers a comprehensive list of expert services to help you build your website or create graphics you need for your business. I create logo and brands and integrate them into beautiful functional websites.">
+    content="Creafix Design's privacy policy.">
 <link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
