--- a/web_development/landingpages.html
+++ b/web_development/landingpages.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Check out my previous web development and garphic design projects - Creafix Design </title>
+  <title>We create stuning landing pages that convert - Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
+    content="Creafix Design can help you design the best landing page to convert your visitor into viable customers.">
   <link rel="icon" href="images/Icon small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
