corrected Api syntax

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ you reach your goals while you stay free to focus on what you do best.</p>
 
 <div class="col-lg-8 col-xs-12">
 <form class="row g-3" action="https://api.form-data.com/f/2phkywknu1294ok48i9sck"
-      method="post" >">
+      method="post">
   <div class="col-md-6">
     <div class="form-floating mb-1">
       <input type="text" name="firstname" class="form-control" id="validationDefault01 floatingInput" placeholder="Firstname" required>
