Updated links to Privacy policy and terms of use on nested pages

--- a/web_development/webdesign.html
+++ b/web_development/webdesign.html
@@ -184,8 +184,8 @@
 
   </div>
   <div id="terms">
-    © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of Use</a>
+    © 2022 by Creafix Design All Rights Reserved. | <a href="./../privacypolicy.html">Privacy Policy</a> | <a
+      href="./../privacypolicy.html">Website Terms of Use</a>
   </div>
 
 </footer>
