--- a/digital_marketing/websitemarketing.html
+++ b/digital_marketing/websitemarketing.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="description"
     content="Creafix Design is able to advise on the best website marketing strategy when building or updating your website.">
-  <link rel="icon" href="../images/Icon%20small-min.png">
+  <link rel="icon" href="./../images/Icon small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
