--- a/web_development/webdesign.html
+++ b/web_development/webdesign.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="description"
     content="Creafix Design extensive experience in building a large variety of websites for businesses.">
-  <link rel="icon" href="images/Icon small-min.png">
+  <link rel="icon" href="./../images/Icon small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
