--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 <meta name="google-site-verification" content="39lnsWINQ7fUCUBEt-z9HrU6ihBVxTcWLhC0KwOmPKc" />
 <script src="https://kit.fontawesome.com/b013160931.js" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K2EL0JQ037"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-K2EL0JQ037');
+</script>
 <script>
   var num = 200; //number of pixels before modifying styles
 
