--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -25,7 +25,17 @@
   <meta name="viewport" content="width-device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/b013160931.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2EL0JQ037"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-K2EL0JQ037');
+  </script>
   <script src="main.js" defer></script>
+  
   <script>
     var num = 200; //number of pixels before modifying styles
 
