updated index page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Visual design, digital marketing and web development - Creafix Design </title>
+  <title>Visual design, digital marketing, web development - Creafix Design </title>
   <meta charset="UTF-8" />
   <meta name="description" content="Creafix Design is a web development, digital marketing and graphic design service provider based in New Zealand. We have experience building websites and e-commerce sites as well as developing brand identities and digital marketing services. " >
 <link rel="icon" href="images/Icon small-min.png">
