Updated all title tags to fit under 56 characters

--- a/creative_services/brandstrategy.html
+++ b/creative_services/brandstrategy.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>We create brand strategy - Creafix Design </title>
+  <title>Brand strategy creation-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
