--- a/creative_services/marketingcollateral.html
+++ b/creative_services/marketingcollateral.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>We create marketing material and collateral - Creafix Design </title>
+  <title>Marketing material|Marketing collateral creation-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
