--- a/creative_services/templates.html
+++ b/creative_services/templates.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>We design presentations, proposals and reports - Creafix Design </title>
+  <title>Presentations|Proposals|Reports templates-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
