--- a/digital_marketing/digitalstrategy.html
+++ b/digital_marketing/digitalstrategy.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>We create bespoke digital marketing strategies- Creafix Design </title>
+  <title>Digital marketing strategies-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
