--- a/digital_marketing/emailmarketing.html
+++ b/digital_marketing/emailmarketing.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>We put together email marketing strategies - Creafix Design </title>
+  <title>Email marketing strategies-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
