--- a/digital_marketing/websitemarketing.html
+++ b/digital_marketing/websitemarketing.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>We create website marketing strategies - Creafix Design </title>
+  <title>Website marketing strategies-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
