--- a/mywork.html
+++ b/mywork.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Our previous projects - Creafix Design </title>
+  <title>Previous projects-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
