--- a/web_development/landingpages.html
+++ b/web_development/landingpages.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>We create stuning landing pages that convert - Creafix Design</title>
+  <title>Landing pages design-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
