--- a/web_development/seo.html
+++ b/web_development/seo.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>We manage your Search Engine Optimisation program - Creafix Design </title>
+  <title>Search Engine Optimisation management-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
