--- a/web_development/webdesign.html
+++ b/web_development/webdesign.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>We create beautiful functional websites - Creafix Design </title>
+  <title>Website development-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
