--- a/websitetermofuse.html
+++ b/websitetermofuse.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Our Website terms of use - Creafix Design </title>
+  <title>Website terms of use-Creafix Design</title>
   <meta charset="UTF-8" />
   <meta name="description"
     content="Creafix Design's term of use.">
