--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Our Privacy Policy - Creafix Design </title>
+  <title>Privacy Policy-Creafix Design </title>
   <meta charset="UTF-8" />
   <meta name="description"
     content="Creafix Design's privacy policy.">
