made title tag longer on logo design page

--- a/creative_services/logodesign.html
+++ b/creative_services/logodesign.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Logo design-Creafix Design </title>
+  <title>Logo design|Icon design|Rebrand-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
