--- a/web-development/seo.html
+++ b/web-development/seo.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>Landing pages design-Creafix Design</title>
+  <title>Search Engine Optimisation management-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design can help you design the best landing page to convert your visitor into viable customers.">
-  <link rel="icon" href="./../images/Icon small-min.png">
+    content="Creafix Design can help you be more visible to your target market by improving your SEO ranking on Google.">
+<link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -65,7 +65,7 @@
     <ul class="menu" id="navbar">
       <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
             alt="creafix design logo" width="150" /></a></li>
-      <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
+      <li class="item"> <a href="../index.html" title="Homepage">Home</a></li>
 
       <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
+          <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing material and
               collateral</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal
+          <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and proposal
               template</a>
           </li>
         </ul>
@@ -88,12 +88,12 @@
           Digital Marketing
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+          <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
           </li>
-          <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
-          <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
+          <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
           </li>
-          <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown item">
@@ -102,15 +102,15 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
+          <li><a class="dropdown-item" href="webdesign.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="landingpages.html">Landing Pages</a>
           </li>
-          <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
+          <li><a class="dropdown-item" href="websiteaudit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
-      <li class="item"> <a href="./../about.html" title="About">About</a></li>
+      <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
+      <li class="item"> <a href="../about.html" title="About">About</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
 
@@ -119,18 +119,20 @@
   </nav>
 
   <div class="title">
-    <h1 class="title">Landing Page Design</h1>
+    <h1 class="title">Search Engine Optimisation (SEO)</h1>
   </div>
   <div class="container">
     <div class="row">
       <div class="col mb-3 align-self-center">
-        <img src="../images/Landingpage.PNG" alt="Example of landing page presented on a laptop screen" class="service-image">
+        <img src="../images/seo.PNG" alt="Phone screen with google search page results" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1 bio">Landing pages are common stand-alone pages used in digital marketing. This is where visitors "land" after they click on a link you've shared in an <a href="./../digital_marketing/smmanagement.html" >ad on social media</a> or <a href= "./../digital_marketing/emailmarketing.html">email campaign</a>.
-        This type of webpages typically has a single objective, make the visitor complete your call to action. Focusing on one
-        goal makes this landing pages the best tool to increase the conversion rates of your marketing campaigns. We design with you the landing
-        pages layouts that suit your marketing objectives.
+        <p class=" mb-1 bio">Search Engine optimisation or SEO is the process used to increase and improve the quality of the unpaid traffic coming
+        to your website. The higher your website ranks on Google for a keyword, the more relevant and abundant the website traffic
+        will be, therefore increasing your chances of sales conversion.
+        SEO is an ongoing process that requires monitoring and adjusting on a regular basis to keep you ranking as high as
+        possible on the Google search pages. We can help you create the strategy to get your website visible for your chosen keywords and report on key
+        ranking parameters to adjust the strategy.
 
 
           </br>
@@ -138,10 +140,11 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li class="bio-list">◼ Design different landing pages depending on your objective</li>
-          <li class="bio-list">◼ Tailor landing pages to your digital marketing strategy</li>
-          <li class="bio-list">◼ Design the funnel sequence of landing pages to achieve sale conversion</li>
-          <li class="bio-list">◼ Integration of your landing pages with main marketing tools available</li>
+          <li class="bio-list">◼ Webpage design and content optimisation for Google ranking</li>
+          <li class="bio-list">◼ Google analytics monitoring and reporting</li>
+          <li class="bio-list">◼ Keyword selection and implementation</li>
+          <li class="bio-list">◼ SEO strategy</li>
+          <li class="bio-list">◼ SEO audits</li>
         </ul>
 
         </p>
@@ -151,23 +154,22 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/webdesign.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/webdesign.html">Web design & development</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/seo.html"><img src="../images/WebDevicon.png"
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/webdesign.html">Web design & development</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/seo.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"> <a href="/web_development/seo.html">Search Engine Optimisation (SEO)</a></div>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/web-development/seo.html">Search Engine Optimisation (SEO)</a></div>
       <div class="w-100 d-md-none"></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/landingpages.html"><img src="../images/WebDevicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/landingpages.html">Landing pages</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/websiteaudit.html"><img src="../images/WebDevicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/websiteaudit.html">Website performance audit</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/landingpages.html"><img
+            src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/landingpages.html">Landing pages</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/websiteaudit.html"><img
+            src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/websiteaudit.html">Website performance audit</a>
+      </div>
     </div>
   </div>
-
-  
 
 
 </body>
@@ -175,7 +177,7 @@
   <div class="container">
     <div class="row">
       <div class="col-2 logofooter">
-        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        <div class="d-none d-md-block"><img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
         </div>
       </div>
       <div class="col-md-auto email-footer">
@@ -187,8 +189,8 @@
 
   </div>
   <div id="terms">
-    © 2022 by Creafix Design All Rights Reserved. | <a href="./../privacypolicy.html">Privacy Policy</a> | <a
-      href="./../privacypolicy.html">Website Terms of Use</a>
+    © 2022 by Creafix Design All Rights Reserved. | <a href="../privacypolicy.html">Privacy Policy</a> | <a
+      href="../privacypolicy.html">Website Terms of Use</a>
   </div>
 
 </footer>
