--- a/creative-services/brandstrategy.html
+++ b/creative-services/brandstrategy.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="description"
     content="Creafix Design offers support to many businesses helping them create brands they are proud of.">
-  <link rel="icon" href="./../images/Icon small-min.png">
+  <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -65,7 +65,7 @@
     <ul class="menu" id="navbar">
       <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
             alt="creafix design logo" width="150" /></a></li>
-      <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
+      <li class="item"> <a href="../index.html" title="Homepage">Home</a></li>
      
       <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
+          <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing material and
               collateral</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal template</a>
+          <li><a class="dropdown-item" href="templates.html">Presentation and proposal template</a>
           </li>
         </ul>
       </li>
@@ -87,12 +87,12 @@
           Digital Marketing
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+          <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
           </li>
-          <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
-          <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
+          <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
           </li>
-          <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown item">
@@ -101,15 +101,15 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
+          <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
           </li>
-          <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
+          <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
-<li class="item"> <a href="./../about.html" title="About">About</a></li>
+      <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
+<li class="item"> <a href="../about.html" title="About">About</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
 
@@ -124,7 +124,7 @@
   <div class="container" > 
     <div class="row"> 
       <div class="col mb-3 align-self-center ">
-<img src="./../images/brand strategy.jpg" alt="people brainstorming in front of whiteboard" class="service-image">
+<img src="../images/brand%20strategy.jpg" alt="people brainstorming in front of whiteboard" class="service-image">
       </div>
       <div class="col">
     <p class=" mb-1 bio">Are you starting up a new business? Or are you thinking about refreshing the look of your current business? We can help
@@ -151,16 +151,16 @@
   
     <div class="container creative-services">
       <div class="row">
-        <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon"
+        <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logodesign.html"><img src="../images/Creativeicon.png" alt="Creative services pencil icon"
             class="service-icon" /></a></div>
-        <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/logodesign.html">Logo creation</a></div>
-        <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/marketingcollateral.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-        <div class="col-lg-2 col-md-2 col-4"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a></div>
+        <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/logodesign.html">Logo creation</a></div>
+        <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketingcollateral.html"><img src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+        <div class="col-lg-2 col-md-2 col-4"> <a href="/creative-services/marketingcollateral.html">Marketing Collateral</a></div>
         <div class="w-100 d-md-none"></div>
-        <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/brandstrategy.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-        <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
-        <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/templates.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-        <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
+        <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brandstrategy.html"><img src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+        <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/brandstrategy.html">Brand strategy</a></div>
+        <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/templates.html"><img src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+        <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/templates.html">Presentation and Proposal</a></div>
       </div>
       </div>
 
@@ -170,7 +170,7 @@
   <div class="container">
     <div class="row">
       <div class="col-2 logofooter">
-        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        <div class="d-none d-md-block"><img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
         </div>
       </div>
       <div class="col-md-auto email-footer">
@@ -182,8 +182,8 @@
 
   </div>
   <div id="terms">
-    © 2022 by Creafix Design All Rights Reserved. | <a href="./../privacypolicy.html">Privacy Policy</a> | <a
-      href="./../privacypolicy.html">Website Terms of Use</a>
+    © 2022 by Creafix Design All Rights Reserved. | <a href="../privacypolicy.html">Privacy Policy</a> | <a
+      href="../privacypolicy.html">Website Terms of Use</a>
   </div>
 
 </footer>
