--- a/creative-services/logodesign.html
+++ b/creative-services/logodesign.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>Presentations|Proposals|Reports templates-Creafix Design</title>
+  <title>Logo design|Icon design|Rebrand-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design can create your next set of template for reports, proposals and presentations.">
-  <link rel="icon" href="./../images/Icon small-min.png">
+    content="Creafix Design offers logo design services to businesses to help them stand out.">
+  <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -65,7 +65,7 @@
     <ul class="menu" id="navbar">
       <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
             alt="creafix design logo" width="150" /></a></li>
-      <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
+      <li class="item"> <a href="../index.html" title="Homepage">Home</a></li>
   
       <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
+          <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing material and
               collateral</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal template</a>
+          <li><a class="dropdown-item" href="templates.html">Presentation and proposal template</a>
           </li>
         </ul>
       </li>
@@ -87,12 +87,12 @@
           Digital Marketing
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+          <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
           </li>
-          <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
-          <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
+          <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
           </li>
-          <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown item">
@@ -101,15 +101,15 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
+          <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
           </li>
-          <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
+          <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
-      <li class="item"> <a href="./../about.html" title="About">About</a></li>
+      <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
+      <li class="item"> <a href="../about.html" title="About">About</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
   
@@ -117,33 +117,34 @@
     </ul>
   </nav>
 
-
   <div class="title">
-    <h1 class="title">Presentation and proposal template</h1>
+    <h1 class="title">Logo Design</h1>
   </div>
   <div class="container">
     <div class="row">
-      <div class="col mb-3 align-self-center">
-        <img src="./../images/presentation.jpg" alt="presentation on laptop screen" class="service-image">
+      <div class="col mb-3  align-self-center">
+        <img src="../images/Colour%20selection.jpg" alt="sample colour palettes for selection"
+          class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1 bio">Who doesn't like receiving compliment on their presentation deck? Help your stakeholder focus on the content of your
-        presentation by using a stylish and uncluttered presentation template that will help you engage with your audience and
-        communicate effectively.
-        We can create a template for you to use as a base for every presentation or help you design your next top notch deck by
-        structuring the message and design layout that will set you up for success.
-
-          </br>
+        <p class=" mb-1 bio">Your logo is a key part of your brand identity and is often the first thing your customers will see and remember. I can
+        help you design a memorable logo that does the talking for you to make you stand out from the pack. The logo design is
+        usually accompanied by a selection of brand assets that can be used alongside your logo depending on the context.
+       </br>
           We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
-          <li class="bio-list">◼ PowerPoint presentation</li>
-          <li class="bio-list">◼ Google Slide presentation</li>
-          <li class="bio-list">◼ Webinar slide deck design</li>
-          <li class="bio-list">◼ Proposal template</li>
-      
+          <li class="bio-list">◼ Logo creation</li>
+          <li class="bio-list">◼ Icon design</li>
+          <li class="bio-list">◼ Branding creation</li>
+          <li class="bio-list">◼ Rebranding</li>
+          <li class="bio-list">◼ Brand style guides</li>
+          <li class="bio-list">◼ Brand and logo assets</li>
+          <li class="bio-list">◼ Templates</li>
+          <li class="bio-list">◼ Marketing collateral</li>
         </ul>
+
         </p>
       </div>
     </div>
@@ -151,23 +152,22 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/logodesign.html"><img
-            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/logodesign.html">Logo creation</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/marketingcollateral.html"><img
-            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logodesign.html"><img
+            src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/logodesign.html">Logo creation</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketingcollateral.html"><img
+            src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/creative-services/marketingcollateral.html">Marketing Collateral</a>
       </div>
       <div class="w-100 d-md-none"></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/brandstrategy.html"><img
-            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/templates.html"><img
-            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brandstrategy.html"><img
+            src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/brandstrategy.html">Brand strategy</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/templates.html"><img
+            src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/templates.html">Presentation and Proposal</a></div>
     </div>
   </div>
-
 
 
 </body>
@@ -175,7 +175,7 @@
   <div class="container">
     <div class="row">
       <div class="col-2 logofooter">
-        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        <div class="d-none d-md-block"><img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
         </div>
       </div>
       <div class="col-md-auto email-footer">
@@ -187,8 +187,8 @@
 
   </div>
   <div id="terms">
-    © 2022 by Creafix Design All Rights Reserved. | <a href="./../privacypolicy.html">Privacy Policy</a> | <a
-      href="./../privacypolicy.html">Website Terms of Use</a>
+    © 2022 by Creafix Design All Rights Reserved. | <a href="../privacypolicy.html">Privacy Policy</a> | <a
+      href="../privacypolicy.html">Website Terms of Use</a>
   </div>
 
 </footer>
