--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
         Creative Services
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
+        <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing material and
             collateral</a></li>
-        <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal template</a>
+        <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and proposal template</a>
         </li>
       </ul>
     </li>
@@ -83,12 +83,12 @@
         Digital Marketing
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+        <li><a class="dropdown-item" href="./../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
         </li>
-        <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
-        <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
+        <li><a class="dropdown-item" href="./../digital-marketing/smmanagement.html">Social Media Management</a></li>
+        <li><a class="dropdown-item" href="./../digital-marketing/websitemarketing.html">Website Marketing</a>
         </li>
-        <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
+        <li><a class="dropdown-item" href="./../digital-marketing/emailmarketing.html">Email Marketing</a></li>
       </ul>
     </li>
     <li class="nav-item dropdown item">
@@ -97,11 +97,11 @@
         Web Development
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
-        <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
-        <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
+        <li><a class="dropdown-item" href="./../web-development/webdesign.html">Web Design</a></li>
+        <li><a class="dropdown-item" href="./../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
+        <li><a class="dropdown-item" href="./../web-development/landingpages.html">Landing Pages</a>
         </li>
-        <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
+        <li><a class="dropdown-item" href="./../web-development/websiteaudit.html">Website Audit</a></li>
       </ul>
     </li>
     <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
@@ -147,34 +147,34 @@ you reach your goals while you stay free to focus on what you do best.</p>
 <div class="title" > <h1 class="title">What we do</h1></div>
 <div class="container intro-services">
   <div class="row">
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logodesign.html"><img src="./../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/logodesign.html">Logo creation</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/marketingcollateral.html"><img src="./../images/Creativeicon.png"
+    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/logodesign.html">Logo creation</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketingcollateral.html"><img src="./../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a></div>
+    <div class="col-lg-2 col-md-2 col-4"> <a href="/creative-services/marketingcollateral.html">Marketing Collateral</a></div>
     <div class="w-100 d-md-none"></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/digitalstrategy.html"><img src="./../images/DMicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/digitalstrategy.html"><img src="./../images/DMicon.png"
           alt="Digital marketing services phone icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/seo.html"><img src="./../images/WebDevicon.png"
+    <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/seo.html"><img src="./../images/WebDevicon.png"
           alt="Web services screen icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/seo.html">Search Engine Optimisation</a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/seo.html">Search Engine Optimisation</a></div>
   </div>
   <div class="row">
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/brandstrategy.html"><img src="./../images/Creativeicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brandstrategy.html"><img src="./../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/templates.html"><img src="./../images/Creativeicon.png"
+    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/brandstrategy.html">Brand strategy</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/templates.html"><img src="./../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/templates.html">Presentation and Proposal</a></div>
     <div class="w-100 d-md-none"></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/webdesign.html"><img src="./../images/WebDevicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/webdesign.html"><img src="./../images/WebDevicon.png"
           alt="Web services screen icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/webdesign.html">Web Design & Development</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/websiteaudit.html"><img src="./../images/WebDevicon.png"
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/webdesign.html">Web Design & Development</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/websiteaudit.html"><img src="./../images/WebDevicon.png"
           alt="Web services screen icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/websiteaudit.html">Website Performance Audit</a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/websiteaudit.html">Website Performance Audit</a></div>
   </div>
 </div>
 <div class="top-line-title" id="work"></div>
