--- a/web-development/webdesign.html
+++ b/web-development/webdesign.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="description"
     content="Creafix Design extensive experience in building a large variety of websites for businesses.">
-  <link rel="icon" href="./../images/Icon small-min.png">
+  <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -65,7 +65,7 @@
     <ul class="menu" id="navbar">
       <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
             alt="creafix design logo" width="150" /></a></li>
-      <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
+      <li class="item"> <a href="../index.html" title="Homepage">Home</a></li>
   
       <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
+          <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing material and
               collateral</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal template</a>
+          <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and proposal template</a>
           </li>
         </ul>
       </li>
@@ -87,12 +87,12 @@
           Digital Marketing
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+          <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
           </li>
-          <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
-          <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
+          <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
           </li>
-          <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown item">
@@ -101,15 +101,15 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
+          <li><a class="dropdown-item" href="webdesign.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="landingpages.html">Landing Pages</a>
           </li>
-          <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
+          <li><a class="dropdown-item" href="websiteaudit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
-      <li class="item"> <a href="./../about.html" title="About">About</a></li>
+      <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
+      <li class="item"> <a href="../about.html" title="About">About</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
   
@@ -130,8 +130,8 @@
         currently and where you're wanted to be in the short to long term to make a recommendation on the most suitable option
         for your situation. We offer services ranging for fully custom coded websites to CMS build websites on Wix, SquareSpace
         or Shopify for example. We take you through the entire process from creating the layout via wireframes to registering
-        your domain, hosting and publishing your website for the world to see. All webpages are optimised for best <a href="./../web_development/seo.html"> SEO ranking</a>
-        making it easier for your customers to find you. If you have an existing website we can also <a href="./../web_development/websiteaudit.html">review</a> it and make suggestions on how we can help.
+        your domain, hosting and publishing your website for the world to see. All webpages are optimised for best <a href="seo.html"> SEO ranking</a>
+        making it easier for your customers to find you. If you have an existing website we can also <a href="websiteaudit.html">review</a> it and make suggestions on how we can help.
   
           </br>
           We can help you with:
@@ -158,19 +158,19 @@
 
 <div class="container creative-services">
   <div class="row">
-    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/webdesign.html"><img src="../images/WebDevicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/webdesign.html">Web design & development</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/seo.html"><img src="../images/WebDevicon.png"
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/webdesign.html">Web design & development</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/seo.html"><img src="../images/WebDevicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"> <a href="/web_development/seo.html">Search Engine Optimisation (SEO)</a></div>
+    <div class="col-lg-2 col-md-2 col-4"> <a href="/web-development/seo.html">Search Engine Optimisation (SEO)</a></div>
     <div class="w-100 d-md-none"></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/landingpages.html"><img
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/landingpages.html"><img
           src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/landingpages.html">Landing pages</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/websiteaudit.html"><img
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/landingpages.html">Landing pages</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/websiteaudit.html"><img
           src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/websiteaudit.html">Website performance audit</a>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/websiteaudit.html">Website performance audit</a>
     </div>
   </div>
 </div>
@@ -181,7 +181,7 @@
   <div class="container">
     <div class="row">
       <div class="col-2 logofooter">
-        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        <div class="d-none d-md-block"><img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
         </div>
       </div>
       <div class="col-md-auto email-footer">
@@ -193,8 +193,8 @@
 
   </div>
   <div id="terms">
-    © 2022 by Creafix Design All Rights Reserved. | <a href="./../privacypolicy.html">Privacy Policy</a> | <a
-      href="./../privacypolicy.html">Website Terms of Use</a>
+    © 2022 by Creafix Design All Rights Reserved. | <a href="../privacypolicy.html">Privacy Policy</a> | <a
+      href="../privacypolicy.html">Website Terms of Use</a>
   </div>
 
 </footer>
