--- a/web-development/websiteaudit.html
+++ b/web-development/websiteaudit.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>Logo design|Icon design|Rebrand-Creafix Design</title>
+  <title>Website audits|Optimisation program-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design offers logo design services to businesses to help them stand out.">
-  <link rel="icon" href="./../images/Icon small-min.png">
+    content="Creafix Design can carry out an audit of your website and suggests option for improvement.">
+  <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -65,19 +65,20 @@
     <ul class="menu" id="navbar">
       <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
             alt="creafix design logo" width="150" /></a></li>
-      <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
-  
+      <li class="item"> <a href="../index.html" title="Homepage">Home</a></li>
+
       <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
+          <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing material and
               collateral</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal template</a>
+          <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and proposal
+              template</a>
           </li>
         </ul>
       </li>
@@ -87,12 +88,12 @@
           Digital Marketing
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+          <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
           </li>
-          <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
-          <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
+          <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
           </li>
-          <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown item">
@@ -101,48 +102,43 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
+          <li><a class="dropdown-item" href="webdesign.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="landingpages.html">Landing Pages</a>
           </li>
-          <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
+          <li><a class="dropdown-item" href="websiteaudit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
-      <li class="item"> <a href="./../about.html" title="About">About</a></li>
+      <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
+      <li class="item"> <a href="../about.html" title="About">About</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
-  
-  
+
+
     </ul>
   </nav>
 
   <div class="title">
-    <h1 class="title">Logo Design</h1>
+    <h1 class="title">Website performance audit</h1>
   </div>
   <div class="container">
     <div class="row">
-      <div class="col mb-3  align-self-center">
-        <img src="./../images/Colour selection.jpg" alt="sample colour palettes for selection"
+      <div class="col mb-3 align-self-center">
+        <img src="../images/webaudit.png" alt="Graph presented on dashboard showing website parameters"
           class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1 bio">Your logo is a key part of your brand identity and is often the first thing your customers will see and remember. I can
-        help you design a memorable logo that does the talking for you to make you stand out from the pack. The logo design is
-        usually accompanied by a selection of brand assets that can be used alongside your logo depending on the context.
-       </br>
+        <p class=" mb-1 bio">Carrying out a performance test on your website allows you to identify the weakest points that might impact the
+        performance and/or the user experience. This is a great tool to help identify the areas of the website that needs
+        optimising to increase your engagement and overall <a href= "seo.html">SEO ranking</a>.
+          </br>
           We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
-          <li class="bio-list">◼ Logo creation</li>
-          <li class="bio-list">◼ Icon design</li>
-          <li class="bio-list">◼ Branding creation</li>
-          <li class="bio-list">◼ Rebranding</li>
-          <li class="bio-list">◼ Brand style guides</li>
-          <li class="bio-list">◼ Brand and logo assets</li>
-          <li class="bio-list">◼ Templates</li>
-          <li class="bio-list">◼ Marketing collateral</li>
+          <li class="bio-list">◼ Complete website audit</li>
+          <li class="bio-list">◼ SEO ranking audit</li>
+          <li class="bio-list">◼ Create a plan to correct the areas of weaknesses</li>
         </ul>
 
         </p>
@@ -152,20 +148,20 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/logodesign.html"><img
-            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/logodesign.html">Logo creation</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/marketingcollateral.html"><img
-            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a>
-      </div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/webdesign.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/webdesign.html">Web design & development</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/seo.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/web-development/seo.html">Search Engine Optimisation (SEO)</a></div>
       <div class="w-100 d-md-none"></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/brandstrategy.html"><img
-            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/templates.html"><img
-            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/landingpages.html"><img
+            src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/landingpages.html">Landing pages</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/websiteaudit.html"><img
+            src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/websiteaudit.html">Website performance audit</a>
+      </div>
     </div>
   </div>
 
@@ -175,7 +171,7 @@
   <div class="container">
     <div class="row">
       <div class="col-2 logofooter">
-        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        <div class="d-none d-md-block"><img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
         </div>
       </div>
       <div class="col-md-auto email-footer">
@@ -187,8 +183,8 @@
 
   </div>
   <div id="terms">
-    © 2022 by Creafix Design All Rights Reserved. | <a href="./../privacypolicy.html">Privacy Policy</a> | <a
-      href="./../privacypolicy.html">Website Terms of Use</a>
+    © 2022 by Creafix Design All Rights Reserved. | <a href="../privacypolicy.html">Privacy Policy</a> | <a
+      href="../privacypolicy.html">Website Terms of Use</a>
   </div>
 
 </footer>
