--- a/websitetermofuse.html
+++ b/websitetermofuse.html
@@ -73,11 +73,11 @@
         Creative Services
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
+        <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing material and
             collateral</a></li>
-        <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal template</a>
+        <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and proposal template</a>
         </li>
       </ul>
     </li>
@@ -87,12 +87,12 @@
         Digital Marketing
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+        <li><a class="dropdown-item" href="./../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
         </li>
-        <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
-        <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
+        <li><a class="dropdown-item" href="./../digital-marketing/smmanagement.html">Social Media Management</a></li>
+        <li><a class="dropdown-item" href="./../digital-marketing/websitemarketing.html">Website Marketing</a>
         </li>
-        <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
+        <li><a class="dropdown-item" href="./../digital-marketing/emailmarketing.html">Email Marketing</a></li>
       </ul>
     </li>
     <li class="nav-item dropdown item">
@@ -101,11 +101,11 @@
         Web Development
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
-        <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
-        <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
+        <li><a class="dropdown-item" href="./../web-development/webdesign.html">Web Design</a></li>
+        <li><a class="dropdown-item" href="./../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
+        <li><a class="dropdown-item" href="./../web-development/landingpages.html">Landing Pages</a>
         </li>
-        <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
+        <li><a class="dropdown-item" href="./../web-development/websiteaudit.html">Website Audit</a></li>
       </ul>
     </li>
     <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
